# Transactive-control-of-linked-heating-and-cooling-system-at-production-sites

./: .gitignore  LICENSE  README.rst  pyproject.toml  requirements.txt
experiments/eta_heating_systems/: experiment_eta_heating_systems.py  experiment_eta_heating_systems_live.py
experiments/eta_heating_systems/common/: demands_quarterhour_2024.xlsx  demands_quarterhour_2024_live.xlsx  global_parameters_05_09_2024_live.xlsx  global_parameters_09_04_2024.xlsx  global_parameters_10_01_2024.xlsx  global_parameters_12_07_2023.xlsx  global_parameters_14_09_2024_live.xlsx  global_parameters_15_09_2024_live.xlsx  global_parameters_30_08_2024_live.xlsx
experiments/eta_heating_systems/config/: 2023_07_12_1_day_benchmark.json  2023_07_12_1_day_s0.json  2023_07_12_1_day_s1.json  2023_07_12_1_day_s2.json  2023_07_12_1_day_s3_1.json  2023_07_12_1_day_s3_2.json  2023_07_12_1_day_s3_3.json  2023_07_12_1_day_s3_4.json  2023_07_12_1_day_s4.json  2023_07_12_1_day_s5.json  2024_01_10_1_day_benchmark.json  2024_01_10_1_day_s0.json  2024_01_10_1_day_s1.json  2024_01_10_1_day_s2.json  2024_01_10_1_day_s3_1.json  2024_01_10_1_day_s3_2.json  2024_01_10_1_day_s3_3.json  2024_01_10_1_day_s3_4.json  2024_01_10_1_day_s4.json  2024_01_10_1_day_s5.json  2024_04_09_1_day_benchmark.json  2024_04_09_1_day_s0.json  2024_04_09_1_day_s1.json  2024_04_09_1_day_s2.json  2024_04_09_1_day_s3_1.json  2024_04_09_1_day_s3_2.json  2024_04_09_1_day_s3_3.json  2024_04_09_1_day_s3_4.json  2024_04_09_1_day_s4.json  2024_04_09_1_day_s5.json  (+5 more)
multi_agent_system/base/: base_agent.py  messages.py  util.py
multi_agent_system/components/: consumer.py  converter.py  heat_exchanger.py  heat_pump.py  market.py  storage.py  system_operator.py  trader.py
multi_agent_system/models/: market_models.py  pricing_models.py  quantity_assessment_models.py
supplementary_material/: plotting.py
(+74 files in other folders)
